--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
         <div class="formAndSvgs">
 
-           <!-- <div class="contactForm">
+            <div class="contactForm">
 
                 <div class="frostedDiv">
 
@@ -413,7 +413,7 @@
 
                 </div>
 
-            </div> -->
+            </div>
 
             <div class="svgShower">
 
