--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
         <div class="processOfMakingBlock">
 
-            <h3>Then the process of making begins</h3>
+            <h3>Then the process <br/> of making begins</h3>
 
             <div class="stepsBoxes">
 
@@ -416,6 +416,8 @@
             </div>
 
             <div class="svgShower">
+
+                <h4>Fill the form <br/> to see what you got</h4>
 
                 <div class="levelOneSvgs levelSvg">
 
