--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
         <div class="processOfMakingBlock">
 
-            <h3>Then the process <br/> of making begins</h3>
+            <h3>Then the process of making begins</h3>
 
             <div class="stepsBoxes">
 
@@ -255,7 +255,7 @@
 
                     <h4>Launch !!!</h4>
 
-                    <p>Once we complete the project, we go over it with you, and we are ready to go.Brace yourselves, we are going online !</p>
+                    <p>Once we complete the project, we go over it with you, and we are ready to launch.Brace yourselves, we are going online !</p>
 
                 </div>
 
