--- a/index.html
+++ b/index.html
@@ -477,6 +477,16 @@
 
         <div class="firePlace">
 
+            <div class="circleOneFirePlace"></div>
+
+            <div class="circleTwoFirePlace"></div>
+
+            <div class="messageBoxFirePlace">
+
+                <p>Just camping here.</p>
+
+            </div>
+
             <img src="assets/images/fireAnimation.gif" id='campingFireSvg' alt="Camping fire"/>
 
             <img src="assets/images/campingVanSvg.svg" id='campingVanSvg' alt="Camping Van"/>
